# mcp-gcp-proxy

./: MIGRATION.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mcp_gcp_proxy/: __init__.py  auth.py  cli.py  config.py  errors.py  proxy.py  transport.py
tests/: test_auth.py  test_cli.py  test_config.py  test_e2e_local.py  test_proxy.py  test_transport.py
